# TIGRO

./: .gitignore  LICENSE  README.md  pyproject.toml
input/: config.ini
notebook/: cgvt.ipynb  log.ipynb  parse.ipynb  run.ipynb  zerog.ipynb
tigro/: __init__.py  __version__.py  logging.py  tigro.py  tigro_ui.py
tigro/classes/: parser.py
tigro/core/: __init__.py  fit.py  fit_ellipse.py  fit_polynomial.py  process.py  run.py
tigro/io/: __init__.py  get_processed_sequence.py  load.py  save.py
tigro/plots/: plot.py
tigro/ui/: app.py  elems.py  io.py  items.py  lab.py  shared.py
tigro/utils/: __init__.py  common_reference_frame.py  flag_outliers.py  lsqellipse.py  median_filter.py  psd.py  transform.py  util.py
