[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tigro"
version = "0.2.1"
description = "TIGRO is a tool developed by the Tiger Team of the Ariel Telescope Assembly with the purpose to analyse the interferometric measurements of the mission."
license = "BSD-3-Clause"
authors = ["Andrea Bocchieri <andrea.bocchieri@esa.int>", "Enzo Pascale"]
readme = "README.md"
homepage = "https://github.com/arielmission-space/TIGRO"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
paos = "^1.2.13"
numpy = "^1.26"
prysm = "*"
lsq-ellipse = "*"
opencv-python = "*"
shiny = "*"
faicons = "*"
mpld3 = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinxcontrib-napoleon = "*"
sphinxcontrib-jsmath = "*"
sphinx-markdown-tables = "*"
jupyter-sphinx = "*"
sphinx-rtd-theme = "*"

[tool.poetry.scripts]
tigro = "tigro.tigro:main"
tigro_ui = "tigro.tigro_ui:main"
